
8.21.13
PlayerBack slows when turning. Speed lost directly proportional to degrees turned. Values might be too nerfed now, needs balancing.
PlayerBack rotation code made incredibly smarter. Should have no more direction switches when rotating too fast or wrong way throws.
PlayerTwoTouch's "pilot" tilts to indicate the current amount of curve
PlayerTwoTouch rotation code similarly improved

8.20.13
PlayerTwoTouch has a little extra curve
PlayerTwoTouch's predictor ball doesn't make sounds anymore
Characters made more visually distinct
Analog sticks bounding box increased

8.14.13
Menu System created
	Keyboard and XBOX Controller Support
	Options Menu
Controller Wrapper created
PlayerBack graphical updates
PlayerTricky and PlayerBack keyboard controls.
PlayerBack and PlayerTwoTouch getting kicked out of lock no longer has Ball call powerKeyReleased()
PlayerTwin assist mechanic removed, replaced by sychronization mechanic
PlayerEnforcer enforcement is scaled by actual velocity.
PlayerTwoTouch kicking predictor vastly improved in every way

8.13.13
Slow-mo versions of all sounds, minor sound tweaks besides
PlayerTricky active-camouflage ability added

8.12.13
Fixed Back and TwoTouch "ball kicked out of lock" behaviour.
Added white bars around field so power kick flashes and other gameplay elements aren't drawn outside of the field

8.9.13
All sounds are now ogg files. Sounds folder 1/7th the size.

7.26.13
PlayerTwin keyboard controls

7.25.13
PlayerDash updates:
	Keyboard controls
	Two buttons have been merged into one button
	Angle code smartened

7.24.13
Keyboard controls revamped for Neo, Neutron, Enforcer, Tricky , and TwoTouch

7.23.13
PlayerNeutron graphics and sound effects
PlayerNeutron can now swing the ball into a goal

7.22.13
PlayerNeutron Prototype completed
Ball can have negative velmag targets, will flip the velocity vector when negative velocities are reached
Ball will not have curve if the velmag target is negative

7.18.13